// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textfield Component should render a disabled input 1`] = `
<div>
  <div
    class="db-textfield db-textfield--text db-textfield--size-xl db-textfield--filled db-textfield--disabled"
  >
    <input
      disabled=""
      placeholder=" "
      type="text"
      value="My disabled 2"
    />
  </div>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Textfield Component should render a disabled textarea 1`] = `
<div>
  <div
    class="db-textfield db-textfield--textarea db-textfield--size-xl db-textfield--filled db-textfield--disabled"
  >
    <textarea
      disabled=""
      placeholder=" "
    >
      My disabled 1
    </textarea>
  </div>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Textfield Component should render a number input 1`] = `
<div>
  <div
    class="db-textfield db-textfield--number db-textfield--size-xl db-textfield--filled"
  >
    <input
      placeholder=" "
      type="number"
      value="123"
    />
  </div>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Textfield Component should render a read-only input 1`] = `
<div>
  <div
    class="db-textfield db-textfield--text db-textfield--size-xl db-textfield--filled db-textfield--readonly"
  >
    <input
      placeholder=" "
      readonly=""
      type="text"
      value="Read Only"
    />
  </div>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Textfield Component should render a text input 1`] = `
<div>
  <div
    class="db-textfield db-textfield--text db-textfield--size-xl db-textfield--filled"
  >
    <input
      placeholder=" "
      type="text"
      value="My value 1"
    />
  </div>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Textfield Component should render a textarea 1`] = `
<div>
  <div
    class="db-textfield db-textfield--textarea db-textfield--size-xl db-textfield--filled"
  >
    <textarea
      placeholder=" "
    >
      Textarea
    </textarea>
  </div>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Textfield Component should use a prefix 1`] = `
<div>
  <div
    class="db-textfield db-textfield--text db-textfield--size-xl db-textfield--filled"
  >
    <span
      class="db-textfield-prefix"
    >
      $
    </span>
    <input
      placeholder=" "
      type="text"
      value="Text"
    />
  </div>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Textfield Component should use a suffix 1`] = `
<div>
  <div
    class="db-textfield db-textfield--text db-textfield--size-xl db-textfield--filled"
  >
    <input
      placeholder=" "
      type="text"
      value="Text"
    />
    <span
      class="db-textfield-suffix"
    >
      €
    </span>
  </div>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Textfield Component should use an unit after the field 1`] = `
<div>
  <div
    class="db-textfield db-textfield--text db-textfield--size-xl db-textfield--filled"
  >
    <input
      placeholder=" "
      type="text"
      value="Text"
    />
    <span
      class="db-textfield-suffix"
    >
      €
    </span>
  </div>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Textfield Component should use an unit before the field 1`] = `
<div>
  <div
    class="db-textfield db-textfield--text db-textfield--size-xl db-textfield--filled"
  >
    <span
      class="db-textfield-prefix"
    >
      £
    </span>
    <input
      placeholder=" "
      type="text"
      value="Text"
    />
  </div>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;
